--- a/package.json
+++ b/package.json
@@ -7,37 +7,27 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "test": "vitest run --coverage",
-    "test:watch": "vitest run --watch",
-    "test:ui": "vitest ui"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.740.0",
     "@aws-sdk/lib-storage": "^3.740.0",
-    "@crowdin/ota-client": "^2.0.1",
     "@nuxt/fonts": "0.10.3",
     "@nuxt/scripts": "0.9.5",
-    "@nuxt/ui": "2.21.0",
     "@nuxtjs/tailwindcss": "6.13.1",
     "data-uri-to-buffer": "^6.0.2",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "nuxt": "^3.15.2",
-    "vitest": "^3.0.3",
     "vue": "latest",
-    "vue-router": "latest",
-    "yaml": "^2.7.0"
+    "vue-router": "latest"
   },
-  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0",
   "devDependencies": {
     "@nuxt/eslint": "^0.7.5",
     "@nuxt/icon": "^1.10.3",
     "@nuxtjs/i18n": "^9.1.1",
     "@types/lodash": "^4.17.14",
     "@types/mime-types": "^2.1.4",
-    "@vitest/coverage-v8": "3.0.3",
-    "@vitest/ui": "3.0.3",
     "typescript": "^5.7.3",
     "vue-tsc": "^2.2.0"
   }
