--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "typescript": "^5.7.3",
     "vue-tsc": "^2.2.0"
   },
+  "engines": {
+    "node": ">=22",
+    "npm": ">=8"
+  },
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
