--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "nuxt": "^3.15.2",
+    "nuxt-security": "2.1.5",
     "pg": "^8.13.1",
     "vue": "latest",
     "vue-router": "latest"
