--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.740.0",
-    "@aws-sdk/lib-storage": "^3.740.0",
+    "@aws-sdk/client-s3": "^3.817.0",
+    "@aws-sdk/lib-storage": "^3.817.0",
     "@nuxt/content": "3.1.0",
     "@nuxt/fonts": "0.10.3",
     "@nuxt/scripts": "0.9.5",
@@ -21,20 +21,21 @@
     "data-uri-to-buffer": "^6.0.2",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
-    "nuxt": "^3.15.2",
+    "nuxt": "^3.17.4",
     "nuxt-security": "2.1.5",
-    "pg": "^8.13.1",
+    "pg": "^8.16.0",
+    "unenv": "^1.10.0",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^0.7.5",
-    "@nuxt/icon": "^1.10.3",
-    "@nuxtjs/i18n": "^9.1.1",
-    "@types/lodash": "^4.17.14",
+    "@nuxt/eslint": "^0.7.6",
+    "@nuxt/icon": "^1.13.0",
+    "@nuxtjs/i18n": "^9.5.4",
+    "@types/lodash": "^4.17.17",
     "@types/mime-types": "^2.1.4",
-    "typescript": "^5.7.3",
-    "vue-tsc": "^2.2.0"
+    "typescript": "^5.8.3",
+    "vue-tsc": "^2.2.10"
   },
   "engines": {
     "node": ">=22",
