--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.817.0",
-    "@aws-sdk/lib-storage": "^3.817.0",
     "@nuxt/fonts": "0.10.3",
+    "@nuxt/scripts": "0.9.5",
     "@nuxtjs/tailwindcss": "6.13.1",
-    "@nuxtjs/turnstile": "0.9.11",
     "@supabase/supabase-js": "^2.49.9",
     "data-uri-to-buffer": "^6.0.2",
     "mime-types": "^2.1.35",
