--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
-  "name": "nuxt-app",
+  "name": "benpai-portfolio",
   "private": true,
   "type": "module",
+  "version": "1.0.0",
+  "description": "My personal portfolio",
+  "author": {
+    "name": "Benjamin",
+    "email": "me@benshawmean.com",
+    "url": "https://benshawmean.com"
+  },
+  "license": "AGPL-3.0-or-later",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
