--- a/package.json
+++ b/package.json
@@ -19,26 +19,27 @@
   },
   "dependencies": {
     "@nuxt/fonts": "0.10.3",
+    "@nuxt/icon": "^1.13.0",
     "@nuxt/scripts": "0.12.1",
+    "@nuxtjs/seo": "^3.2.2",
     "@nuxtjs/tailwindcss": "6.13.1",
+    "@unhead/vue": "^2.0.19",
     "nuxt": "^4.1.3",
     "nuxt-security": "2.1.5",
+    "typescript": "^5.8.3",
     "unenv": "^1.10.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-tsc": "^2.2.10"
   },
   "devDependencies": {
-    "@types/node": "latest",
     "@nuxt/devtools": "^2.5.0",
     "@nuxt/eslint": "^0.7.6",
-    "@nuxt/icon": "^1.13.0",
-    "@nuxtjs/i18n": "^9.5.5",
-    "typescript": "^5.8.3",
-    "vue-tsc": "^2.2.10"
+    "@types/node": "latest"
   },
   "engines": {
     "node": ">=22",
     "npm": ">=8"
   },
-  "packageManager": "pnpm@10.12.1"
+  "packageManager": "pnpm@10.18.2"
 }
