--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nuxtjs/seo": "^3.2.2",
     "@nuxtjs/tailwindcss": "6.13.1",
     "@unhead/vue": "^2.0.19",
+    "jose": "^6.1.0",
     "nuxt": "^4.1.3",
     "nuxt-security": "2.1.5",
     "typescript": "^5.8.3",
@@ -41,5 +42,5 @@
     "node": ">=22",
     "npm": ">=8"
   },
-  "packageManager": "pnpm@10.18.2"
+  "packageManager": "pnpm@10.20.0"
 }
