--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/tailwindcss": "6.13.1",
     "@unhead/vue": "^2.0.19",
     "jose": "^6.1.0",
+    "lodash": "^4.17.21",
     "nuxt": "^4.1.3",
     "nuxt-security": "2.1.5",
     "typescript": "^5.8.3",
