--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jose": "^6.1.0",
     "lodash": "^4.17.21",
     "nuxt": "^4.1.3",
+    "nuxt-og-image": "5.1.13",
     "nuxt-security": "2.1.5",
     "typescript": "^5.8.3",
     "unenv": "^1.10.0",
